k8s/infra/pihole/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: infra
spec:
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: LoadBalancer
  loadBalancerIP: 192.168.1.201
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: infra
spec:
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  type: LoadBalancer
  loadBalancerIP: 192.168.1.202
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp-ipv6
  namespace: infra
spec:
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: LoadBalancer
  loadBalancerIP: fc00:1234:5678:9abc::1
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp-ipv6
  namespace: infra
spec:
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  type: LoadBalancer
  loadBalancerIP: fc00:1234:5678:9abc::2
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
