k8s/infra/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: infra
  labels:
    app: pihole
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: infra
  labels:
    app: pihole
spec:
  type: NodePort
  ports:
  - port: 53
    targetPort: 53
    nodePort: 30054
    protocol: TCP
    name: dns-tcp
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: infra
  labels:
    app: pihole
spec:
  type: NodePort
  ports:
  - port: 53
    targetPort: 53
    nodePort: 30053
    protocol: UDP
    name: dns-udp
  selector:
    app: pihole
